# trio-web

./: .gitignore  Makefile  README.md  package-lock.json  package.json  render.yaml
.github/workflows/: ci.yml
apps/api/: .env.example  pyproject.toml
apps/api/app/: main.py
apps/api/tests/: test_api.py  test_backtester.py  test_bos.py  test_bos_flow.py  test_edgar_pit.py  test_fmp_pit.py  test_four_factor.py  test_insider_flow.py  test_mirofish.py  test_mla.py  test_mla_pipeline.py  test_mos.py  test_providers.py  test_qv.py  test_retail_flow.py  test_thirteenf.py  test_universe_endpoint.py  test_universes.py
apps/web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: BYOKBanner.tsx  BacktestCard.tsx  FactorRadar.tsx  LiveUniverseCard.tsx  QuartileChip.tsx  ResultsTable.tsx  (+4 more)
docs/: DEPLOY.md  GOAL.md  LAUNCH_POSTS.md  PITCH.md  PITCH.pptx  PITCH_ELEVATOR.md  PRD.md
docs/algorithms/: backtester.md  bos.md  four_factor.md  institutional_flow.md  mirofish.md  mla.md  mos.md  providers.md  qv.md  retail_flow.md  universes.md
docs/posts/: README.md  cold-email.md  hackernews.md  linkedin.md  reddit-algotrading.md  twitter-thread.md
docs/sessions/: 2026-04-25_p3-p4-sliders.jsonl
scripts/: _smoke_insider.py  _smoke_qv.py  _smoke_retail.py  build_demo_mp4.sh  build_pitch_pptx.js  demo_captions.srt  record_demo.js  retrain_with_fmp.sh  shap_analysis.py  walk_forward_gate.py  walk_forward_head_to_head.py  walk_forward_three_engines.py
(+3 files in other folders)
